--- a/index.html
+++ b/index.html
@@ -26,6 +26,12 @@
             <p>Another description</p>
             <a href="#">Play</a>
         </div>
+        
+        <div class="game-card">
+            <h3>Raft Wars</h3>
+            <a href="/flash/raftwars/">Play</a>
+        </div>
+        
     </section>
 
 </body>
