--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
         </div>
         
         <div class="game-card">
-            <h3>Raft Wars</h3>
-            <a href="/flash/raftwars/">Play</a>
+            <h3>Run 3</h3>
+            <a href="/flash/run3/">Play</a>
         </div>
         
     </section>
