--- a/flash/run3/index.html
+++ b/flash/run3/index.html
@@ -14,7 +14,7 @@
         const ruffle = window.RufflePlayer.newest();
         const player = ruffle.createPlayer();
         document.getElementById("game-container").appendChild(player);
-        player.load("Run 3.swf");
+        player.load("Run_3.swf");
     </script>
 
 </body>
