--- a/index.html
+++ b/index.html
@@ -27,10 +27,18 @@
             <a href="#">Play</a>
         </div>
         
-        <div class="game-card">
-            <h3>Run 3</h3>
-            <a href="/flash/run3/">Play</a>
+<h2>HTML5 Games</h2>
+        <div class="games-container">
+            <div class="game-card">
+                <h3>Run 3</h3>
+                <iframe src="https://run3.io" 
+                        width="800" 
+                        height="600" 
+                        frameborder="0" 
+                        allowfullscreen>
+                </iframe>
         </div>
+    </div>
         
     </section>
 
