--- a/index.html
+++ b/index.html
@@ -26,19 +26,11 @@
             <p>Another description</p>
             <a href="#">Play</a>
         </div>
-        
-<h2>HTML5 Games</h2>
-        <div class="games-container">
-            <div class="game-card">
-                <h3>Run 3</h3>
-                <iframe src="https://run3.io" 
-                        width="800" 
-                        height="600" 
-                        frameborder="0" 
-                        allowfullscreen>
-                </iframe>
+
+        <div class="game-card">
+            <h3>Run 3</h3>
+            <a href="/html/run3.html">Play</a>
         </div>
-    </div>
         
     </section>
 
