--- a/html/run3.html
+++ b/html/run3.html
@@ -6,7 +6,7 @@
     <title>Run 3</title>
 </head>
 <body>
-    <iframe src="https://player03.com/run/3/beta/" 
+    <iframe src="https://lekug.github.io/tn6pS9dCf37xAhkJv/" 
             width="100%" 
             height="800" 
             frameborder="0" 
