--- a/html/run3.html
+++ b/html/run3.html
@@ -8,7 +8,7 @@
 <body>
     <iframe src="https://lekug.github.io/tn6pS9dCf37xAhkJv/" 
             width="100%" 
-            height="800" 
+            height="100%" 
             frameborder="0" 
             allowfullscreen>
     </iframe>
