--- a/html/run3.html
+++ b/html/run3.html
@@ -7,8 +7,8 @@
 </head>
 <body>
     <iframe src="https://lekug.github.io/tn6pS9dCf37xAhkJv/" 
-            width="100%" 
-            height="100%" 
+            width="800" 
+            height="600" 
             frameborder="0" 
             allowfullscreen>
     </iframe>
