--- a/html/run3.html
+++ b/html/run3.html
@@ -1,6 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <div class="game-wrapper">
+    <iframe src="/html/run3/index.html" frameborder="0" allowfullscreen></iframe>
+</div>
+
+<style>
+html, body {
+    margin: 0;
+    height: 100%;
+}
+
+.game-wrapper {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+}
+
+.game-wrapper iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+</style>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Run 3</title>
