--- a/html/run3.html
+++ b/html/run3.html
@@ -1,41 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <div class="game-wrapper">
-    <iframe src="/html/run3/index.html" frameborder="0" allowfullscreen></iframe>
-</div>
-
-<style>
-html, body {
-    margin: 0;
-    height: 100%;
-}
-
-.game-wrapper {
-    position: relative;
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
-}
-
-.game-wrapper iframe {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-}
-</style>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Run 3</title>
+    <style>
+        html, body {
+            margin: 0;
+            height: 100%;
+        }
+
+        .game-wrapper {
+            position: relative;
+            width: 100%;
+            height: 100%;
+            overflow: hidden;
+        }
+
+        .game-wrapper iframe {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            border: 0;
+        }
+    </style>
 </head>
 <body>
-    <iframe src="https://lekug.github.io/tn6pS9dCf37xAhkJv/" 
-            width="800" 
-            height="600" 
-            frameborder="0" 
-            allowfullscreen>
-    </iframe>
+    <div class="game-wrapper">
+        <iframe src="/html/run3/index.html" allowfullscreen></iframe>
+    </div>
 </body>
 </html>
