--- a/html/run3.html
+++ b/html/run3.html
@@ -10,26 +10,14 @@
             height: 100%;
         }
 
-        .game-wrapper {
-            position: relative;
-            width: 100%;
-            height: 100%;
-            overflow: hidden;
-        }
-
-        .game-wrapper iframe {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
+        iframe {
+            width: 100vw;    /* full width of viewport */
+            height: 100vh;   /* full height of viewport */
             border: 0;
         }
     </style>
 </head>
 <body>
-    <div class="game-wrapper">
-        <iframe src="/html/run3/index.html" allowfullscreen></iframe>
-    </div>
+    <iframe src="https://lekug.github.io/tn6pS9dCf37xAhkJv/" allowfullscreen></iframe>
 </body>
 </html>
