--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
         <h2>HTML5 Games</h2>
         <div class="game-row">
             <div class="game-card">
-                <a href="/html/run3.html/">
+                <a href="/html/run3.html">
                     <img src="/images/run3-icon.png" alt="Run 3">
                     Run 3
                 </a>
