--- a/index.html
+++ b/index.html
@@ -66,12 +66,12 @@
         }
 
         .game-card {
-            min-width: 150px;
-            flex: 0 0 auto;
-            background: #222;
-            border-radius: 10px;
-            text-align: center;
-            padding: 10px;
+    width: 150px;       /* consistent card size */
+    min-width: 150px;
+    text-align: center;
+    background: #222;
+    border-radius: 10px;
+    padding: 10px;
             transition: transform 0.2s;
         }
 
@@ -80,10 +80,12 @@
         }
 
         .game-card img {
-            width: 100%;
-            border-radius: 6px;
-            margin-bottom: 8px;
-        }
+    width: 120px;        /* fixed icon width */
+    height: 120px;       /* optional, makes all icons square */
+    object-fit: cover;   /* crops oversized images cleanly */
+    border-radius: 6px;
+    margin-bottom: 8px;
+}
 
         .game-card a {
             color: #fff;
