--- a/index.html
+++ b/index.html
@@ -133,6 +133,12 @@
                     Run 3
                 </a>
             </div>
+             <div class="game-card">
+                <a href="/html/run3.html">
+                    <img src="/images/fbwgforest-icon.png" alt="Fireboy and Watergirl - Forest Temple">
+                    Fireboy & Watergirl - Forest Temple
+                </a>
+            </div>
             <!-- Add more HTML5 games here -->
         </div>
     </section>
