--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
             </div>
              <div class="game-card">
                 <a href="/html/run3.html">
-                    <img src="/images/fbwgforest-icon.png" alt="Fireboy and Watergirl - Forest Temple">
+                    <img src="/images/fbwgforest-icon.jpeg" alt="Fireboy and Watergirl - Forest Temple">
                     Fireboy & Watergirl - Forest Temple
                 </a>
             </div>
