--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                 </a>
             </div>
              <div class="game-card">
-                <a href="/html/run3.html">
+                <a href="/html/fbwgforest.html">
                     <img src="/images/fbwgforest-icon.jpeg" alt="Fireboy and Watergirl - Forest Temple">
                     Fireboy & Watergirl - Forest Temple
                 </a>
