--- a/index.html
+++ b/index.html
@@ -139,6 +139,12 @@
                     Fireboy & Watergirl - Forest Temple
                 </a>
             </div>
+             <div class="game-card">
+                <a href="/html/basketrandom.html">
+                    <img src="/images/br.png" alt="Basket Random">
+                    Basket Random
+                </a>
+            </div>
             <!-- Add more HTML5 games here -->
         </div>
     </section>
