--- a/html/basketrandom.html
+++ b/html/basketrandom.html
@@ -18,6 +18,6 @@
     </style>
 </head>
 <body>
-    <iframe src="https://sportsgames.gitlab.io/game/basket-random.html/" allowfullscreen></iframe>
+    <iframe src="https://funkypotato.com/gamez/basket-random/index.html/" allowfullscreen></iframe>
 </body>
 </html>
