--- a/index.html
+++ b/index.html
@@ -108,9 +108,9 @@
         <h2>Flash Games</h2>
         <div class="game-row">
             <div class="game-card">
-                <a href="/flash/raftwars/">
-                    <img src="/images/raftwars-icon.png" alt="Raft Wars">
-                    Raft Wars
+                <a href="/flash/earntodie/">
+                    <img src="/images/raftwars-icon.png" alt="Earn To Die">
+                    Earn To Die
                 </a>
             </div>
             <div class="game-card">
