--- a/flash/earntodie/index.html
+++ b/flash/earntodie/index.html
@@ -29,6 +29,12 @@
 
         // Load the SWF file
         player.load("74774.swf");
+        
+        // Force full scaling
+        player.style.width = "100%";
+        player.style.height = "100%";
+        player.style.maxWidth = "none";
+        player.style.maxHeight = "none";
     </script>
 </body>
 </html>
