--- a/index.html
+++ b/index.html
@@ -149,5 +149,25 @@
         </div>
     </section>
 
+    <!-- Category: Pokémon -->
+    <section class="category">
+        <h2>Pokémon Games</h2>
+        <div class="game-row">
+            <div class="game-card">
+                <a href="/flash/earntodie/">
+                    <img src="/images/pkmnred.png" alt="Coming soon">
+                    Pokémon Red
+                </a>
+            </div>
+            <div class="game-card">
+                <a href="/flash/anothergame/">
+                    <img src="/images/anothergame-icon.png" alt="Another Game">
+                    Another Game
+                </a>
+            </div>
+            <!-- Add more games here -->
+        </div>
+    </section>
+
 </body>
 </html>
