--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         <div class="game-row">
             <div class="game-card">
                 <a href="/flash/earntodie/">
-                    <img src="/images/raftwars-icon.png" alt="Earn To Die">
+                    <img src="/images/earntodie-icon.png" alt="Earn To Die">
                     Earn To Die
                 </a>
             </div>
