--- a/index.html
+++ b/index.html
@@ -114,9 +114,21 @@
                 </a>
             </div>
             <div class="game-card">
-                <a href="/flash/anothergame/">
-                    <img src="/images/anothergame-icon.png" alt="Another Game">
-                    Another Game
+                <a href="/flash/run2/">
+                    <img src="/images/run2-icon.png" alt="Run 2">
+                    Run 2
+                </a>
+            </div>
+            <div class="game-card">
+                <a href="/flash/papaspizzeria/">
+                    <img src="/images/pp-icon.png" alt="Papa's Pizzeria">
+                    Papa's Pizzeria
+                </a>
+            </div>
+            <div class="game-card">
+                <a href="/flash/papasburgeria/">
+                    <img src="/images/pb-icon.png" alt="Papa's Burgeria">
+                    Papa's Burgeria
                 </a>
             </div>
             <!-- Add more games here -->
