--- a/index.html
+++ b/index.html
@@ -157,6 +157,13 @@
                     Basket Random
                 </a>
             </div>
+            <div class="game-row">
+            <div class="game-card">
+                <a href="/html/fnae.html">
+                    <img src="/images/fnae-icon.png" alt="Five Nights at Epstein's">
+                    Five Nights at Epstein's
+                </a>
+            </div>
             <!-- Add more HTML5 games here -->
         </div>
     </section>
