--- a/html/fnae.html
+++ b/html/fnae.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Basket Random</title>
+    <title>Five Nights at Epstein's</title>
     <style>
         html, body {
             margin: 0;
@@ -18,6 +18,6 @@
     </style>
 </head>
 <body>
-    <iframe src="<iframe src="https://fivenightsatepsteins.org/fivenightsatepsteins-online/embed" width="100%" height="600" frameborder="0" allowfullscreen></iframe>" allowfullscreen></iframe>
+    <iframe src="<iframe src="<iframe src="https://fivenightsatepsteins.org/fivenightsatepsteins-online/embed" width="100%" height="600" frameborder="0" allowfullscreen></iframe>" width="100%" height="600" frameborder="0" allowfullscreen></iframe>" allowfullscreen></iframe>
 </body>
 </html>
