--- a/html/fnae.html
+++ b/html/fnae.html
@@ -18,6 +18,6 @@
     </style>
 </head>
 <body>
-    <iframe src="<iframe src="<iframe src="https://fivenightsatepsteins.org/fivenightsatepsteins-online/embed" allowfullscreen></iframe>
+    <iframe src="https://fivenightsatepsteins.org/fivenightsatepsteins-online/embed" allowfullscreen></iframe>
 </body>
 </html>
