--- a/flash/fbwg2/index.html
+++ b/flash/fbwg2/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Papa's Pizzeria</title>
+    <title>Fireboy & Watergirl 2 - The Light Temple</title>
     <script src="ruffle.js"></script>
     <style>
         html, body {
