--- a/index.html
+++ b/index.html
@@ -146,12 +146,6 @@
                 </a>
             </div>
              <div class="game-card">
-                <a href="/html/fbwgforest.html">
-                    <img src="/images/fbwgforest-icon.jpeg" alt="Fireboy and Watergirl - Forest Temple">
-                    Fireboy & Watergirl - Forest Temple
-                </a>
-            </div>
-             <div class="game-card">
                 <a href="/html/basketrandom.html">
                     <img src="/images/br.png" alt="Basket Random">
                     Basket Random
@@ -166,6 +160,27 @@
             <!-- Add more HTML5 games here -->
         </div>
     </section>
+
+    <!-- Category: Fireboy & Watergirl -->
+            <div class="game-card">
+                <a href="/html/fbwgforest.html">
+                    <img src="/images/fbwgforest-icon.jpeg" alt="Fireboy and Watergirl - Forest Temple">
+                    Fireboy & Watergirl - Forest Temple
+                </a>
+            </div>
+            <div class="game-card">
+                <a href="/flash/fbwg2/">
+                    <img src="/images/fbwg2.png" alt="Fireboy and Watergirl - Light Temple">
+                    Fireboy & Watergirl 2 - Light Temple
+                </a>
+            </div>
+            <div class="game-card">
+                <a href="/flash/fbwg3/">
+                    <img src="/images/fbwg3.png" alt="Fireboy and Watergirl - Ice Temple">
+                    Fireboy & Watergirl 3 - Ice Temple
+                </a>
+            </div>
+
 
     <!-- Category: Pokémon -->
     <section class="category">
