--- a/index.html
+++ b/index.html
@@ -162,19 +162,22 @@
     </section>
 
     <!-- Category: Fireboy & Watergirl -->
+    <section class="category">
+        <h2>HTML5 Games</h2>
+        <div class="game-row"> 
             <div class="game-card">
                 <a href="/html/fbwgforest.html">
                     <img src="/images/fbwgforest-icon.jpeg" alt="Fireboy and Watergirl - Forest Temple">
                     Fireboy & Watergirl - Forest Temple
                 </a>
             </div>
-            <div class="game-card">
+             <div class="game-card">
                 <a href="/flash/fbwg2/">
                     <img src="/images/fbwg2.png" alt="Fireboy and Watergirl - Light Temple">
                     Fireboy & Watergirl 2 - Light Temple
                 </a>
             </div>
-            <div class="game-card">
+             <div class="game-card">
                 <a href="/flash/fbwg3/">
                     <img src="/images/fbwg3.png" alt="Fireboy and Watergirl - Ice Temple">
                     Fireboy & Watergirl 3 - Ice Temple
