--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 
     <!-- Category: Fireboy & Watergirl -->
     <section class="category">
-        <h2>HTML5 Games</h2>
+        <h2>Fireboy & Watergirl Games</h2>
         <div class="game-row"> 
             <div class="game-card">
                 <a href="/html/fbwgforest.html">
@@ -183,7 +183,7 @@
                     Fireboy & Watergirl 3 - Ice Temple
                 </a>
             </div>
-
+    </section>
 
     <!-- Category: Pokémon -->
     <section class="category">
