--- a/index.html
+++ b/index.html
@@ -157,6 +157,12 @@
                     Five Nights at Epstein's
                 </a>
             </div>
+             <div class="game-card">
+                <a href="/html/minimetro.html">
+                    <img src="/images/minimetro-icon.png" alt="Mini Metro">
+                    Mini Metro
+                </a>
+            </div>
             <!-- Add more HTML5 games here -->
         </div>
     </section>
