Update and rename red.html to pkmnred.html

--- a/gba/pkmnred.html
+++ b/gba/pkmnred.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Emulation</title>
 
-    <script src="/emu/emulator.js"></script>
+    <script src="/emulatorjs/emulator.js"></script>
 
     <style>
         body {
@@ -31,7 +31,7 @@
     EJS_core = 'gb';
 </script>
 
-<script src="/emu/data/loader.js"></script>
+<script src="/emulatorjs/data/loader.js"></script>
 
 </body>
 </html>
