--- a/index.html
+++ b/index.html
@@ -196,8 +196,8 @@
         <h2>Pokémon Games</h2>
         <div class="game-row">
             <div class="game-card">
-                <a href="/flash/earntodie/">
-                    <img src="/images/pkmnred.png" alt="Coming soon">
+                <a href="/gba/pkmnred.html/">
+                    <img src="/images/pkmnred.png" alt="Pokemon Red">
                     Pokémon Red
                 </a>
             </div>
