--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
         <div class="game-row">
             <div class="game-card">
                 <a href="/gba/pkmnred.html/">
-                    <img src="/images/pkmnred.png" alt="Pokemon Red">
+                    <img src="/images/pkmnred.png" alt="Coming soon">
                     Pokémon Red
                 </a>
             </div>
