--- a/index.html
+++ b/index.html
@@ -163,6 +163,12 @@
                     Mini Metro
                 </a>
             </div>
+             <div class="game-card">
+                <a href="/html/bitlife.html">
+                    <img src="/images/bitlife-icon.png" alt="Bitlife">
+                    Bitlife
+                </a>
+            </div>
             <!-- Add more HTML5 games here -->
         </div>
     </section>
