--- a/index.html
+++ b/index.html
@@ -169,6 +169,12 @@
                     Bitlife
                 </a>
             </div>
+             <div class="game-card">
+                <a href="/html/stickmanhook.html">
+                    <img src="/images/stickmnanhook-icon.png" alt="Stickman Hook">
+                    Stickman Hook
+                </a>
+            </div>
             <!-- Add more HTML5 games here -->
         </div>
     </section>
