--- a/index.html
+++ b/index.html
@@ -121,6 +121,17 @@ applyBrandMode();
         <p>Scroll down to explore all your favorite games!</p>
     </header>
 
+<body>
+
+    <!-- toggle here -->
+    <label class="switch">
+        <input type="checkbox" id="brand-toggle">
+        <span class="slider"></span>
+    </label>
+
+    <!-- rest of homepage content -->
+
+</body>
     <!-- Category: Flash -->
     <section class="category">
         <h2>Flash Games</h2>
