--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ function applyBrandMode() {
         favicon.href = "/images/mhs-icon.png";       // your alt icon
     } else {
         document.title = "Aaron Regmi Games";           // your normal title
-        favicon.href = "/assets/arlogo.png";    // your normal icon
+        favicon.href = "/images/arlogo.png";    // your normal icon
     }
 }
 
