--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<link id="dynamic-favicon" rel="icon" type="image/png" href="/assets/icon-normal.png">
+<link id="dynamic-favicon" rel="icon" type="image/png" href="/images/arlogo.png">
 
 <script>
 function applyBrandMode() {
