--- a/index.html
+++ b/index.html
@@ -36,6 +36,42 @@ applyBrandMode();
             color: #fff;
         }
 
+/* toggle switch */
+.switch {
+    position: fixed;
+    top: 15px;
+    right: 15px;
+    display: inline-block;
+    width: 50px;
+    height: 26px;
+    z-index: 9999;
+}
+.switch input { display: none; }
+.slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0; left: 0;
+    right: 0; bottom: 0;
+    background-color: #444;
+    border-radius: 34px;
+    transition: .3s;
+}
+.slider:before {
+    position: absolute;
+    content: "";
+    height: 20px; width: 20px;
+    left: 3px; bottom: 3px;
+    background-color: white;
+    border-radius: 50%;
+    transition: .3s;
+}
+input:checked + .slider {
+    background-color: #ff9900;
+}
+input:checked + .slider:before {
+    transform: translateX(24px);
+}
+
         /* --- Header / hero --- */
         header {
             background: linear-gradient(90deg, #ff4d4d, #ff9900);
