--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@ function applyBrandMode() {
     const favicon = document.getElementById("dynamic-favicon");
 
     if (mode === "alt") {
-        document.title = "Melbourne High School";            // your alt title
-        favicon.href = "/images/mhs-icon.png";       // your alt icon
+        document.title = "Melbourne High School";
+        favicon.href = "images/mhs-icon.png?v=1";
     } else {
-        document.title = "Aaron Regmi Games";           // your normal title
-        favicon.href = "/images/arlogo.png";    // your normal icon
+        document.title = "Aaron Regmi Games";
+        favicon.href = "images/arlogo.png?v=1";
     }
 }
 
